apostrophe/REM for M20